package game.model;

public class Rules {
    
}
