@startuml logic

package game.logic {

    class SettingsController {
        Pagination tableMenu
        Pagination cueMenu
        Pagination modeMenu
        ImageView coin
    }

    class GameController {
        Rules rules
        Board board
        Ball ballInstance
        Timeline timeline
        Timer shotClock
        ProgressBar shotClockBar
        Player player1
        Player player2
        Ball ball[]
        ImageView cue
        Line guidelineToBall
        Circle ghostBall
        Line guidelineFromBall
        Line guidelineFromCue
        Slider powerSlider
        ArrayList<Integer> thisTurnPottedBalls
        boolean potted[]
        Label player1NicknameLabel
        Label player2NicknameLabel
        Label turnboardLabel
        Label foulboardLabel
        Label centralboardLabel
        Label winLabel
        ImageView[] solidScoreBall
        ImageView[] stripedScoreBall
        ImageView blackScoreBall
        startGame()
        startShotClock()
        guidedTrajectory()
        fixTrajectory()
        cueLoading()
        cueShot()
        update()
    }

    class Rules {
        GameController game
        checkFoul()
        checkPotted()
    }

    class Board {
        GameController game
        showPlayerNickname()
        showPlayerBreaking()
        showPlayerTurn()
        changeTurn()
        showFoul()
        ballAssignment()
        showEightPockets()
        eightPocketDeclaration()
        removeEightPockets()
        win()
        eightPotted()
    }

    GameController "1" *---> "1" SettingsController: settings

    GameController ----> Rules: <<create>>
    GameController "1" *----> "1" Rules: rules
    Rules "1" *----> "1" GameController: game

    GameController ----> Board: <<create>>
    GameController "1" *----> "1" Board: board
    Board "1" *----> "1" GameController: game

    Rules -> Board: <<create>>
    Rules "1" *-> "1" Board: board
    
}

@enduml